--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,13 +10,16 @@
           <div class="form-group">
             <label for="">Email</label>
             <input [(ngModel)]="loginUserData.email" name="email" type="text" class="form-control rounded-0" required>
+            <div class="invalid-feedback">
+              Please choose a username.
+            </div>
           </div>
           <div class="form-group">
             <label for="">Password</label>
             <input [(ngModel)]="loginUserData.password" name="password" type="password" class="form-control rounded-0" required>
           </div>
-            <label class="pt-2 pl-2" *ngIf="showError">Error! Please try again.</label>
-            <button (click)="loginUser()" type="button" class="btn btn-success float-left">Login</button>
+            <label class="text-danger" *ngIf="showError">Error! Please try again.</label>
+            <button (click)="loginUser()" type="button" class="btn btn-success float-right">Login</button>
         </form>
       </div>
     </div>
